# tanks

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
assets/: config.cfg
assets/UI/: config.cfg
assets/UI/fonts/: config.cfg
assets/UI/sounds/: config.cfg
assets/shell/: shell.cfg
assets/tank/: tank.cfg
assets/test/: config.cfg  e_config.cfg  e_font1.cfg  e_font2.cfg  e_multisprite1.cfg  e_multisprite2.cfg  e_sound1.cfg  e_sound2.cfg  e_sprite.cfg  e_texture1.cfg  e_texture2.cfg  e_texture3.cfg  e_unknowntype.cfg
assets/test/fonts/: config.cfg
assets/test/sounds/: config.cfg
assets/test/textures/: config.cfg
assets/world/: config.cfg
assets/world/sounds/: config.cfg
assets/world/worlds/: aquaduct.cfg  config.cfg  evergreen.cfg
doc/: CRC.md  Coderichtlinien.md  Entitaet.md  InterfaceDiagram.drawio  Pflichtenheft.md  Programmfluss.md  Spielaufbau.md
doc/DFD/: 0.dot  2-UI.dot  3-EntityHandler.dot  DFD.md  Kontext.dot
doc/SDLW/: ConfigDoku.md  SpriteDoku.md
doc/doxygen/: Doxyfile
include/: adder.h  button.h  entity.h  entityHandler.h  error.h  gui.h  input.h  list.h  physics.h  scene.h  sdlWrapper.h  sprite.h  tank.h  world.h
include/entities/: shell.h  tank.h
include/guiElements/: button.h  text.h
lib/: CMakeLists.txt
lib/SDL/cmake/sdl2/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
lib/cmocka/: CMakeLists.txt
lib/cmocka/cmake/Modules/: AddCMockaTest.cmake
lib/cmocka/include/: cmocka.h
lib/cmocka/src/: cmocka.c
src/: adder.c  entityHandler.c  gui.c  list.c  main.c  physics.c  scene.c  sdlWrapper.c  sprite.c  tank.c  world.c
src/entities/: shell.c  tank.c
src/guiElements/: button.c  text.c
src/scenes/: chooseworldscene.c  controlsscene.c  ingamescene.c  mainmenuscene.c  nameplayerscene.c  scene_err_fail.c  scenebttncallbackfunc.c  startupscene.c  victoryscene.c
test/: CMakeLists.txt  test_adder.c  test_entityHandler.c  test_gui.c  test_list.c  test_physics.c  test_sdl.c  test_sdlw_auto.c  test_sdlw_visual.c  test_sprite.c  test_tank.c  test_world_auto.c  test_world_visual.c
test/mocks/: mock_heap.c  mock_physics.c  mock_sdl.c  mock_sdlw.c
